# user-service

./: Cargo.toml  start.sh
src/: error.rs  main.rs  store.rs
src/application/services/user/: repository.rs  service.rs
src/domain/: common.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  value_objects.rs
src/implementation/: mod.rs  uuid7_id_provider.rs
src/implementation/postgres/: dto.rs  mod.rs  repository.rs
src/infrastructure/: config.rs  database.rs
src/presentation/http_server/: handler.rs  mod.rs  server.rs
