[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1"
async_once = "0.2"
envconfig = "0.10.0"
uuid7 = "0.2.6"
validator = { version = "0.15", features = ["derive"] }
warp = "0.3"